young older 최종 수정 및 모델 수정

--- a/CBNU_Kiosk_main/bugger/templates/bugger/old_order.html
+++ b/CBNU_Kiosk_main/bugger/templates/bugger/old_order.html
@@ -642,7 +642,14 @@
         {% endfor %}
     </div>
     <!-- 드링크 탭--->
-
+<pre>
+         ㅤ
+         ㅤ
+         ㅤ
+         ㅤ
+         ㅤ
+         ㅤ
+     </pre>
 
 
 </section>
