--- a/CBNU_Kiosk_main/bugger/templates/bugger/camera.html
+++ b/CBNU_Kiosk_main/bugger/templates/bugger/camera.html
@@ -51,7 +51,7 @@
         <div class="col-lg-6">
             <div class="text-center mb-2">
                 <h1 class="camera-title fw-bolder">카메라를 응시해주세요</h1><br>
-                <p class="camera-desc">연령대 별 추천 메뉴를 안내해드립니다.</p><br>
+                <p class="camera-desc"> </p><br>
                 <img src="/static/assets/spinner.gif" alt="loading" width="80">
                 <p class="lead fw-normal text-muted" id='seconds' style="display:none;">8</p>
             </div>
