--- a/CBNU_Kiosk_main/bugger/templates/bugger/old_confirm.html
+++ b/CBNU_Kiosk_main/bugger/templates/bugger/old_confirm.html
@@ -5,7 +5,9 @@
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-<script>  
+<script>
+
+
     function go_pay() {
         setTimeout(pay_now, 5000);
     };
@@ -78,7 +80,16 @@ function startSpeechRecognition() {
                 else if(data.stt=='뒤로'){
                 location.href = '{% url 'bugger:old_order' %}';
                 }
-                 else if(data.stt=='카드 결제'){
+                 else if(data.stt=='카드'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
+                        modal.show();
+
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+               else if(data.stt=='간편'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
                         modal.show();
 
@@ -87,9 +98,234 @@ function startSpeechRecognition() {
                             modal.hide();
                         });
                 }
-                else if(data.stt=='간편 결제'){
+                 else if(data.stt=='간편결제'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
+                        modal.show();
 
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
                 }
+                else if(data.stt=='간편으로'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
+                        modal.show();
+
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+                else if(data.stt=='간편으로해줘'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
+                        modal.show();
+
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+                else if(data.stt=='간판으로 해 줘'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
+                        modal.show();
+
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+                else if(data.stt=='간편하게 해 줘'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
+                        modal.show();
+
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+                else if(data.stt=='한편으로 해 줘'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
+                        modal.show();
+
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+                else if(data.stt=='감 편으로 해 줘'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
+                        modal.show();
+
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+                else if(data.stt=='간판으로'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
+                        modal.show();
+
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+                else if(data.stt=='간판으로'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
+                        modal.show();
+
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+                else if(data.stt=='간 편으로'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
+                        modal.show();
+
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+                else if(data.stt=='남편으로'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
+                        modal.show();
+
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+                else if(data.stt=='한 판으로'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
+                        modal.show();
+
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+                else if(data.stt=='강촌으로'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
+                        modal.show();
+
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+
+                else if(data.stt=='하드'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
+                        modal.show();
+
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+                else if(data.stt=='카드 결제'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
+                        modal.show();
+
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+                else if(data.stt=='카드결제'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
+                        modal.show();
+
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+                else if(data.stt=='카드결제로'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
+                        modal.show();
+
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+                 else if(data.stt=='카드 결제로'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
+                        modal.show();
+
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+                else if(data.stt=='카드로해줘'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
+                        modal.show();
+
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+                else if(data.stt=='카드로 해 줘'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
+                        modal.show();
+
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+                else if(data.stt=='한자로 해 줘'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
+                        modal.show();
+
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+                else if(data.stt=='카드로결제로해줘'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
+                        modal.show();
+
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+                else if(data.stt=='카드로 결제해 줘'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
+                        modal.show();
+
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+                else if(data.stt=='카드 결제로 해 줘'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
+                        modal.show();
+
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+                else if(data.stt=='카드 결제해 줘'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
+                        modal.show();
+
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+
+
                   else {
                     // 다른 단어가 입력되었을 때 다시 음성 인식을 시작
                     isListening = false;
@@ -147,13 +383,13 @@ $(document).ready(function () {
         width: 50%;
         height: 10%;
         color: #000000;
-        background-color: #F2F2F2;
+        background-color: #EF8C47;
     }
     #app-pay {
         width: 50%;
         height: 10%;
         color: #ffffff;
-        background-color: #E51937;
+        background-color: #C63720;
     }
     #cart-list > * {
         color: #fff;
@@ -182,7 +418,7 @@ $(document).ready(function () {
         </div>
         
 		<section class="py-3">
-            <div class="container my-5 py-5">
+            <div class="container my-3 py-3">
                 <div class="row gx-3"> 
                     {% for item in order_list %} 
                         <div class='col-lg-4 col-4 mt-5'>
@@ -206,9 +442,9 @@ $(document).ready(function () {
 </div>
 
 <section class="bottombar">
-    <div class="row gx-9 mt-3 mb-3" id="totalPrice">
+    <div class="row gx-9 mt-1 mb-3" id="totalPrice">
         <div class="col-7">
-            <h2 class="fw-bolder mt-3 mb-3 text-start" style="padding-left: 0.9rem;">총 주문 금액</h2>
+            <h1 class="fw-bolder mt-3 mb-3 text-start" style="padding-left: 0.9rem;">총 주문 금액</h1>
         </div>
         <div class="col-5">
             <h2 class="fw-bolder mt-3 mb-3 text-danger text-end" id="cart-total-money" style="padding-right: 1rem;">{{total_price}} 원</h2>
@@ -220,9 +456,9 @@ $(document).ready(function () {
         </div>
 
         <!-- 카드 결제 -->
-        <div id="card-pay" class="py-5 mt-3" style="cursor:pointer; float:left;" OnClick="go_pay();" data-bs-toggle="modal" data-bs-target="#portfolioModal_card">
+        <div id="card-pay" class="py-5 mt-3" style="cursor:pointer; float:left;" onclick="playAudio(); go_pay();" data-bs-toggle="modal" data-bs-target="#portfolioModal_card">
             <h1 class="fw-bolder text-center display-5">
-                <i class="bi bi-credit-card"></i> 카드 결제
+                <i class="bi bi-credit-card"></i> 💳 카드 결제
             </h1>
         </div>
         
@@ -299,4 +535,7 @@ $(document).ready(function () {
         audio.volume = 1;
         audio.play();
 </script>
+
+
+
 {% endblock content %}
