--- a/CBNU_Kiosk_main/bugger/templates/bugger/old_confirm.html
+++ b/CBNU_Kiosk_main/bugger/templates/bugger/old_confirm.html
@@ -83,7 +83,7 @@ function startSpeechRecognition() {
                  else if(data.stt=='카드'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
                         modal.show();
-
+                        go_pay()
                         // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
                         document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
                             modal.hide();
@@ -92,7 +92,7 @@ function startSpeechRecognition() {
                else if(data.stt=='간편'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
                         modal.show();
-
+                        go_pay()
                         // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
                         document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
                             modal.hide();
@@ -101,7 +101,7 @@ function startSpeechRecognition() {
                  else if(data.stt=='간편결제'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
                         modal.show();
-
+                        go_pay()
                         // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
                         document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
                             modal.hide();
@@ -110,7 +110,7 @@ function startSpeechRecognition() {
                 else if(data.stt=='간편으로'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
                         modal.show();
-
+                        go_pay()
                         // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
                         document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
                             modal.hide();
@@ -119,7 +119,7 @@ function startSpeechRecognition() {
                 else if(data.stt=='간편으로해줘'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
                         modal.show();
-
+                        go_pay()
                         // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
                         document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
                             modal.hide();
@@ -128,7 +128,7 @@ function startSpeechRecognition() {
                 else if(data.stt=='간판으로 해 줘'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
                         modal.show();
-
+                        go_pay()
                         // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
                         document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
                             modal.hide();
@@ -137,7 +137,7 @@ function startSpeechRecognition() {
                 else if(data.stt=='간편하게 해 줘'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
                         modal.show();
-
+                        go_pay()
                         // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
                         document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
                             modal.hide();
@@ -146,7 +146,7 @@ function startSpeechRecognition() {
                 else if(data.stt=='한편으로 해 줘'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
                         modal.show();
-
+                        go_pay()
                         // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
                         document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
                             modal.hide();
@@ -155,7 +155,7 @@ function startSpeechRecognition() {
                 else if(data.stt=='감 편으로 해 줘'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
                         modal.show();
-
+                        go_pay()
                         // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
                         document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
                             modal.hide();
@@ -164,7 +164,7 @@ function startSpeechRecognition() {
                 else if(data.stt=='간판으로'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
                         modal.show();
-
+                        go_pay()
                         // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
                         document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
                             modal.hide();
@@ -173,7 +173,7 @@ function startSpeechRecognition() {
                 else if(data.stt=='간판으로'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
                         modal.show();
-
+                        go_pay()
                         // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
                         document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
                             modal.hide();
@@ -182,7 +182,7 @@ function startSpeechRecognition() {
                 else if(data.stt=='간 편으로'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
                         modal.show();
-
+                        go_pay()
                         // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
                         document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
                             modal.hide();
@@ -191,7 +191,7 @@ function startSpeechRecognition() {
                 else if(data.stt=='남편으로'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
                         modal.show();
-
+                        go_pay()
                         // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
                         document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
                             modal.hide();
@@ -200,7 +200,7 @@ function startSpeechRecognition() {
                 else if(data.stt=='한 판으로'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
                         modal.show();
-
+                        go_pay()
                         // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
                         document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
                             modal.hide();
@@ -209,7 +209,7 @@ function startSpeechRecognition() {
                 else if(data.stt=='강촌으로'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
                         modal.show();
-
+                        go_pay()
                         // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
                         document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
                             modal.hide();
@@ -219,7 +219,7 @@ function startSpeechRecognition() {
                 else if(data.stt=='하드'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
                         modal.show();
-
+                        go_pay()
                         // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
                         document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
                             modal.hide();
@@ -228,7 +228,7 @@ function startSpeechRecognition() {
                 else if(data.stt=='카드 결제'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
                         modal.show();
-
+                        go_pay()
                         // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
                         document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
                             modal.hide();
@@ -237,7 +237,7 @@ function startSpeechRecognition() {
                 else if(data.stt=='카드결제'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
                         modal.show();
-
+                        go_pay()
                         // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
                         document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
                             modal.hide();
@@ -246,7 +246,7 @@ function startSpeechRecognition() {
                 else if(data.stt=='카드결제로'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
                         modal.show();
-
+                        go_pay()
                         // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
                         document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
                             modal.hide();
@@ -255,7 +255,7 @@ function startSpeechRecognition() {
                  else if(data.stt=='카드 결제로'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
                         modal.show();
-
+                        go_pay()
                         // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
                         document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
                             modal.hide();
@@ -264,7 +264,7 @@ function startSpeechRecognition() {
                 else if(data.stt=='카드로해줘'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
                         modal.show();
-
+                        go_pay()
                         // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
                         document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
                             modal.hide();
@@ -273,7 +273,7 @@ function startSpeechRecognition() {
                 else if(data.stt=='카드로 해 줘'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
                         modal.show();
-
+                        go_pay()
                         // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
                         document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
                             modal.hide();
@@ -282,7 +282,7 @@ function startSpeechRecognition() {
                 else if(data.stt=='한자로 해 줘'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
                         modal.show();
-
+                        go_pay()
                         // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
                         document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
                             modal.hide();
@@ -291,7 +291,7 @@ function startSpeechRecognition() {
                 else if(data.stt=='카드로결제로해줘'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
                         modal.show();
-
+                        go_pay()
                         // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
                         document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
                             modal.hide();
@@ -300,7 +300,7 @@ function startSpeechRecognition() {
                 else if(data.stt=='카드로 결제해 줘'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
                         modal.show();
-
+                        go_pay()
                         // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
                         document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
                             modal.hide();
@@ -309,7 +309,7 @@ function startSpeechRecognition() {
                 else if(data.stt=='카드 결제로 해 줘'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
                         modal.show();
-
+                        go_pay()
                         // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
                         document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
                             modal.hide();
@@ -318,7 +318,7 @@ function startSpeechRecognition() {
                 else if(data.stt=='카드 결제해 줘'){
                      var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
                         modal.show();
-
+                        go_pay()
                         // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
                         document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
                             modal.hide();
@@ -456,7 +456,7 @@ $(document).ready(function () {
         </div>
 
         <!-- 카드 결제 -->
-        <div id="card-pay" class="py-5 mt-3" style="cursor:pointer; float:left;" onclick="playAudio(); go_pay();" data-bs-toggle="modal" data-bs-target="#portfolioModal_card">
+        <div id="card-pay" class="py-5 mt-3" style="cursor:pointer; float:left;" onclick="go_pay();" data-bs-toggle="modal" data-bs-target="#portfolioModal_card">
             <h1 class="fw-bolder text-center display-5">
                 <i class="bi bi-credit-card"></i> 💳 카드 결제
             </h1>
