음성인식 예약어 old_p,w

--- a/CBNU_Kiosk_main/bugger/templates/bugger/old_order.html
+++ b/CBNU_Kiosk_main/bugger/templates/bugger/old_order.html
@@ -1212,7 +1212,8 @@ function handleSpeechRecognitionResult(result) {
         case '와퍼':
             showMenu('Whopper');
             break;
-        case '불고기와퍼':
+
+      case '불고기와퍼':
             getMenuInfoByName('불고기와퍼');
             break;
         case '불고기 와퍼':
@@ -1221,9 +1222,19 @@ function handleSpeechRecognitionResult(result) {
         case '불고기 어퍼':
             getMenuInfoByName('불고기와퍼');
             break;
-        case '불고기 아파':
+       case '불고기 어포':
             getMenuInfoByName('불고기와퍼');
             break;
+       case '불고기 오프':
+            getMenuInfoByName('불고기와퍼');
+            break;
+       case '불고기 목포':
+            getMenuInfoByName('불고기와퍼');
+            break;
+       case '불고기 아퍼':
+            getMenuInfoByName('불고기와퍼');
+            break;
+
         case '치즈와퍼':
             getMenuInfoByName('치즈와퍼');
             break;
@@ -1233,7 +1244,6 @@ function handleSpeechRecognitionResult(result) {
         case '치즈 어퍼':
             getMenuInfoByName('치즈와퍼');
             break;
-
        case '치즈 어포':
             getMenuInfoByName('치즈와퍼');
             break;
@@ -1245,6 +1255,376 @@ function handleSpeechRecognitionResult(result) {
             break;
        case '치즈 아퍼':
             getMenuInfoByName('치즈와퍼');
+            break;
+
+
+       case '기본와퍼':
+            getMenuInfoByName('기본와퍼');
+            break;
+       case '기분 엎어':
+            getMenuInfoByName('기본와퍼');
+            break;
+       case '기본 오프':
+            getMenuInfoByName('기본와퍼');
+            break;
+       case '기본 워터':
+            getMenuInfoByName('기본와퍼');
+            break;
+        case '기본 와퍼':
+            getMenuInfoByName('기본와퍼');
+            break;
+        case '기분 와퍼':
+            getMenuInfoByName('기본와퍼');
+            break;
+       case '이쁜 와퍼':
+            getMenuInfoByName('기본와퍼');
+            break;
+        case '기쁨 와퍼':
+            getMenuInfoByName('기본와퍼');
+            break;
+        case '2분 와퍼':
+            getMenuInfoByName('기본와퍼');
+            break;
+        case '기본 어플':
+            getMenuInfoByName('기본와퍼');
+            break;
+        case '기본 어퍼':
+            getMenuInfoByName('기본와퍼');
+            break;
+       case '기본 어포':
+            getMenuInfoByName('기본와퍼');
+            break;
+       case '기본 오프':
+            getMenuInfoByName('기본와퍼');
+            break;
+       case '기본 오퍼':
+            getMenuInfoByName('기본와퍼');
+            break;
+       case '기본 목포':
+            getMenuInfoByName('기본와퍼');
+            break;
+       case '기본 아퍼':
+            getMenuInfoByName('기본와퍼');
+            break;
+
+        case '강서구 아퍼':
+            getMenuInfoByName('통새우와퍼');
+            break;
+        case '동수원 4':
+            getMenuInfoByName('통새우와퍼');
+            break;
+
+        case '풍속 엎어':
+            getMenuInfoByName('통새우와퍼');
+            break;
+       case '통새우와퍼':
+            getMenuInfoByName('통새우와퍼');
+            break;
+        case '통새우 와퍼':
+            getMenuInfoByName('통새우와퍼');
+            break;
+       case '동서고가 4':
+            getMenuInfoByName('통새우와퍼');
+            break;
+        case '김정호 4':
+            getMenuInfoByName('통새우와퍼');
+            break;
+       case '주무세요 갚아':
+            getMenuInfoByName('통새우와퍼');
+            break;
+
+        case '소고기 베이컨와퍼':
+            getMenuInfoByName('소고기베이컨와퍼');
+            break;
+         case '소고기베이컨와퍼':
+            getMenuInfoByName('소고기베이컨와퍼');
+            break;
+          case '소고기 베이컨 와퍼':
+            getMenuInfoByName('소고기베이컨와퍼');
+            break;
+
+          case '속이 베이커 아파':
+            getMenuInfoByName('소고기베이컨와퍼');
+            break;
+
+          case '소고기 데이콤 아퍼':
+            getMenuInfoByName('소고기베이컨와퍼');
+            break;
+
+          case '소고기 베이컨 버터':
+            getMenuInfoByName('소고기베이컨와퍼');
+            break;
+
+          case '소고기 베이컨 워터':
+            getMenuInfoByName('소고기베이컨와퍼');
+            break;
+         case '소고기 베이컨 오토':
+            getMenuInfoByName('소고기베이컨와퍼');
+            break;
+
+         case '소고기 베이크 마포':
+            getMenuInfoByName('소고기베이컨와퍼');
+            break;
+
+          case '속이 배가 아파':
+            getMenuInfoByName('소고기베이컨와퍼');
+            break;
+
+         case '속이 배송 아파':
+            getMenuInfoByName('소고기베이컨와퍼');
+            break;
+
+         case '속이 배가 아파':
+            getMenuInfoByName('소고기베이컨와퍼');
+            break;
+
+         case '소고기 베이크 마커':
+            getMenuInfoByName('소고기베이컨와퍼');
+            break;
+
+        case '버섯소고기와퍼':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+
+        case '버섯소고기 와퍼':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+        case '버섯 소고기 와퍼':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+
+        case '바다 소고기 와퍼':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+        case '조선 후기 와퍼':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+        case '한국의 아파':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+        case '소고기 엎어':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+
+        case '더워서 속이 아파':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+
+        case '부산 소고기 멈춰':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+
+        case '버섯 소고기 마포':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+
+        case '버섯 소고기 먹통':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+
+        case '버섯 속이 아파':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+        case '더덕 소고기 엎어':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+        case '버섯 소고기 없어':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+
+        case '버섯 소고기 아파':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+
+        case '다섯 소고기 엎어':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+
+        case '버섯 소고기 워터':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+        case '바로 소고기 아파':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+
+
+        case '더덕 소고기 마포':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+
+
+        case '저도 소고기 없어':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+
+
+        case '버섯 소고기 막창':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+
+        case '버섯 소고기 아퍼':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+         case '5 소고기 와퍼':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+        case '소고기 와퍼':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+        case '더덕 소고기 마파':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+        case '바닷속이 아퍼':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+        case '보덕 소고기 마포':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+        case '부산 소고기 아파':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+        case '바닷 소고기 와퍼':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+        case '버섯 불고기 와퍼':
+            getMenuInfoByName('버섯소고기와퍼');
+            break;
+        case '세가지고기와퍼':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+        case '세가지고기 와퍼':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+        case '세가지 고기 와퍼':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+            case '세 가지 고기 와퍼':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+            case '세 가지 고기 아파':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+        case '고기 와퍼':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+            case '사가지고 격포':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+            case '해 가지고 김학범':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+            case '세 가지 공유 먹통':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+            case '세 가지 고기 없어':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+            case '세 가지 고기 엎어':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+            case '전화 주고 기억법':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+            case '세 가지 종류 아퍼':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+            case '사 가지고 기와 아파':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+            case '세 가지 복이 없어':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+            case '새가족 고교 아퍼':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+            case '사 가지고 교 아파':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+            case '사 가지고 온게 없어':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+            case '세 가지 고기 마포':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+            case '사 가지고 기어 2':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+            case '새 가지고 기억법':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+            case '사가지고 김 아퍼':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+            case '해가지고 기억 톡':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+            case '사가지고 기억 4':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+            case '사가지고 김 아퍼':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+            case '사가지고 기 확보':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+            case '사 가지고 기버터':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+            case '사 가지고 기어 4':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+            case '해가지고 김 아퍼':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+            case '세 가지 고기 먹토':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+            case '세 가지 고기 아퍼':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+            case '사가지고 김 아퍼':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+
+            case '사 가지고 거기 아파':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+            case '새 가지고 기어 4':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+            case '사가지고 기억 톡':
+            getMenuInfoByName('세가지고기와퍼');
+            break;
+
+            case '새 가지고 격포':
+            getMenuInfoByName('세가지고기와퍼');
             break;
     }
 }
